--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port: 9000
+server.port: 8888
 
 spring.datasource.url=jdbc:h2:mem:testdb
+#para añadir permanentemente a la BD:
+#spring.datasource.url=jdbc:h2:file:./dbdata
+#spring.sql.init.mode=always
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=miguel
 spring.datasource.password=Miguel
